# Kursovaya

./: CMakeLists.txt  Trip.cpp  Trip.h  main.cpp
Exceptions/: CreateFileException.cpp  CreateFileException.h  FileException.cpp  FileException.h  OpenFileException.cpp  OpenFileException.h
Persons/: Jobseeker.cpp  Jobseeker.h  Person.cpp  Person.h
Persons/Workers/: Driver.cpp  Driver.h  Manager.cpp  Manager.h  Worker.cpp  Worker.h
Transport/: BigBus.cpp  BigBus.h  Bus.cpp  Bus.h  SmallBus.cpp  SmallBus.h
