cmake_minimum_required(VERSION 3.24)
project(2)

set(CMAKE_CXX_STANDARD 17)

add_executable(2 main.cpp Exceptions/OpenFileException.h Transport/Bus.cpp Exceptions/OpenFileException.cpp Persons/Jobseeker.cpp Exceptions/FileException.cpp Exceptions/FileException.h Exceptions/OpenFileException.cpp Exceptions/OpenFileException.h  Exceptions/FileException.cpp Exceptions/FileException.h Persons/Workers/Worker.h Exceptions/CreateFileException.cpp Exceptions/CreateFileException.h Persons/Workers/Manager.cpp)
